# LocalVTT

./: .gitattributes  .gitignore  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CMakeLists.txt  Info.plist.in  LICENSE  README.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: build.yml  ci.yml  release.yml
docs/guides/: USER_GUIDE.md
resources/: icons.qrc  shaders.qrc
resources/shaders/: basic.frag  basic.vert  lighting.frag  lighting.vert
scripts/: build-and-run.command  build-ci-macos-fixed.sh  build-ci-macos.sh  build-release.sh  build.bat  build.sh  clean-build.bat  clean-build.sh  verify-bundle.sh
src/: main.cpp
src/audio/: AmbientPlayer.cpp  AmbientPlayer.h  MusicRemote.cpp  MusicRemote.h  MusicRemote_mac.mm
src/controllers/: AtmosphereController.cpp  AtmosphereController.h  AtmosphereManager.cpp  AtmosphereManager.h  AtmospherePreset.h  AtmosphereState.h  FileOperationsManager.cpp  FileOperationsManager.h  FogAutosaveController.cpp  FogAutosaveController.h  FogToolsController.cpp  FogToolsController.h  GridController.cpp  GridController.h  LightingController.cpp  LightingController.h  MenuManager.cpp  MenuManager.h  PlayerWindowController.cpp  PlayerWindowController.h  RecentFilesController.cpp  RecentFilesController.h  TabsController.cpp  TabsController.h  ToolManager.cpp  ToolManager.h  ViewZoomController.cpp  ViewZoomController.h
src/graphics/: FogMistEffect.cpp  FogMistEffect.h  FogOfWar.cpp  FogOfWar.h  GMBeacon.cpp  GMBeacon.h  GridOverlay.cpp  GridOverlay.h  ImageCache.cpp  ImageCache.h  LightingOverlay.cpp  LightingOverlay.h  LightningEffect.cpp  LightningEffect.h  LoadingProgressWidget.cpp  LoadingProgressWidget.h  MapDisplay.cpp  MapDisplay.h  MapImageManager.cpp  MapImageManager.h  MouseInputManager.cpp  MouseInputManager.h  PingIndicator.cpp  PingIndicator.h  PointLight.h  PointLightSystem.cpp  PointLightSystem.h  Portal.cpp  Portal.h  PortalSystem.cpp  PortalSystem.h  SceneAnimationDriver.cpp  SceneAnimationDriver.h  SceneBuilder.cpp  SceneBuilder.h  SceneManager.cpp  SceneManager.h  ToolOverlayWidget.cpp  ToolOverlayWidget.h  WallSystem.cpp  (+8 more)
src/opengl/: OpenGLMapDisplay.cpp  OpenGLMapDisplay.h  PostProcessingSystem.cpp  PostProcessingSystem.h  ShaderManager.cpp  ShaderManager.h
src/ui/: AtmosphereToolboxWidget.cpp  AtmosphereToolboxWidget.h  DarkTheme.cpp  DarkTheme.h  DebugConsoleWidget.cpp  DebugConsoleWidget.h  KeyboardShortcutsOverlay.cpp  KeyboardShortcutsOverlay.h  LoadingOverlay.cpp  LoadingOverlay.h  MainWindow.cpp  MainWindow.h  PlayerWindow.cpp  PlayerWindow.h  ToastNotification.cpp  ToastNotification.h  ToolboxWidget.cpp  ToolboxWidget.h
src/ui/dialogs/: LightEditDialog.cpp  LightEditDialog.h  SavePresetDialog.cpp  SavePresetDialog.h  SettingsDialog.cpp  SettingsDialog.h
src/ui/widgets/: ColorPickerButton.cpp  ColorPickerButton.h  MapBrowserWidget.cpp  MapBrowserWidget.h  ThumbnailCache.cpp  ThumbnailCache.h  ToolStatusWidget.cpp  ToolStatusWidget.h
src/utils/: ActionRegistry.cpp  ActionRegistry.h  AnimationHelper.cpp  AnimationHelper.h  CustomCursors.cpp  CustomCursors.h  CustomPresetManager.cpp  CustomPresetManager.h  DebugConsole.cpp  DebugConsole.h  ErrorHandler.cpp  ErrorHandler.h  FogToolMode.h  ImageLoader.cpp  ImageLoader.h  LogHandler.cpp  LogHandler.h  MapSession.cpp  MapSession.h  MemoryManager.cpp  MemoryManager.h  SecureWindowRegistry.cpp  SecureWindowRegistry.h  SettingsManager.cpp  SettingsManager.h  ToolType.h  VTTLoader.cpp  VTTLoader.h
